--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>न्यायग्रन्थाः - Final Textual Tree</title>
+  <title>वैशेषिकग्रन्थाः - Final Textual Tree</title>
   <script src="https://d3js.org/d3.v7.min.js"></script>
   <style>
     body {
@@ -75,7 +75,7 @@ const data = {
       ]
     },
     {
-      name: "तत्त्वचिन्तामणिः",
+      name: "पदार्थधर्मसंग्रहः",
       children: [
         { name: "📖 शब्दखण्डः", link: "#", relation: "Section" },
         { name: "📖 सप्तदशखण्डः", link: "#", relation: "Section" },
