--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 <script>
 // Define tree data
 const data = {
-  name: "न्यायग्रन्थाः",
+  name: "वैशेषिकग्रन्थाः",
   children: [
     {
       name: "न्यायसूत्रभाष्यम्",
